# tailsome

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: result.rs  some.rs
