[package]
name = "tailsome"
description = "Blanket traits providing `.into_ok()`, `.into_err()`, and `.into_some()` for happier method chaining."
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
keywords = ["chaining", "pipelines", "tap", "pipe"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/mjdwitt/tailsome"

[dependencies]

[dev-dependencies]
rstest = { version = "0.16.0", default-features = false }
